# usbprog

./: .cproject  .gitignore  .project  README  logic.c  logic.h  main.c
FT2232Clone/: main.c  usbn2mc.h
at45flash/: Makefile  main.c
avrdude/: avr.h  avr910.c  avr910.h  avrdude.conf.in  butterfly.c  config.h  configure.ac  lists.c  serbb_posix.c  solaris_ecpp.h  stk500.h  stk500generic.h
avrdude-5.2/: Makefile  Makefile.in  ac_cfg.h  ac_cfg.h.in  aclocal.m4  avr.h  avrdude.conf  avrpart.c  config.status  fileio.h  pgm.h  usbdevs.h
avrdude-5.2_usbpatch/: Makefile.am  Makefile.in  avr910.c  avrdude.1  avrpart.h  bitbang.h  butterfly.c  butterfly.h  config.c  config_gram.y  configure  configure.ac  fileio.c  lexer.l  ser_win32.c  stk500v2.c  term.h  usbdevs.h  usbprog.c  usbprog.h
avrdude-5.3.cvs/: Makefile.am  config_gram.y  my_ddk_hidsdi.h  ser_avrdoper.c  usbasp.c
avrispmk2ANDrs232/: Makefile  main.c  uart.h
avrispmk2klon/: Makefile  README  avrispmk2.hex  main.c  main.c_soft_spi  main.hex  uart.c  usbn2mc.c  usbn2mc.h  usbnterm.c
avrupdate/: Makefile  TODO  avrupdate-gui.gladep
avrupdate/tools/avrupdate-gui/src/: Makefile.am  avrupdate-gui.c  avrupdate-gui.h  callbacks.c  callbacks.h  interface.c  main.c
blinkdemo/: Makefile  blink.hex  main.c  main.hex  uart.c  usbn2mc.c  wait.c
board/: 625000022A.pcb  avrboard.brd  avrboard.sch  parts.txt  (+14 more)
picprog/odyssey-with-usbprog-0.5/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
picprog/odyssey-with-usbprog-0.5/data/: Makefile  Makefile.am  Makefile.in  pic.conf
picprog/odyssey-with-usbprog-0.5/doc/: doxygen.cfg  odyssey.1  pic.conf.5
picprog/odyssey-with-usbprog-0.5/scripts/: autogen.sh  mkinstalldirs
picprog/odyssey-with-usbprog-0.5/src/: ConfigFile.cxx  ConfigFile.h  DataBuffer.cxx  DataBuffer.h  Device.cxx  Device.h  DirectPPIO.cxx  DirectPPIO.h  HexFile.cxx  HexFile.h  HexFile_ihx16.cxx  HexFile_ihx8.cxx  IO.cxx  IO.h  LinuxPPDevIO.cxx  LinuxPPDevIO.h  Makefile  Makefile.am  Makefile.in  ParallelPort.cxx  ParallelPort.h  Util.cxx  Util.h  config.h  config.h.in  main.cxx
picprog/odyssey-with-usbprog-0.5/src/.deps/: ConfigFile.Po  DataBuffer.Po  Device.Po  DirectPPIO.Po  HexFile.Po  HexFile_ihx16.Po  HexFile_ihx8.Po  IO.Po  LinuxPPDevIO.Po  ParallelPort.Po  Util.Po  main.Po
picprog/odyssey-with-usbprog-0.5/src/device/: Pic12f6xxDevice.cxx  Pic16Device.cxx  Pic16f6xx.cxx  Pic16f7xDevice.cxx  Pic16f81xDevice.cxx  Pic16f87xADevice.cxx  Pic16f8xxDevice.cxx  Pic18Device.cxx  Pic18f2xx0Device.cxx  PicDevice.cxx  PicDevice.h
picprog/odyssey-with-usbprog-0.5/src/device/.deps/: Pic12f6xxDevice.Po  Pic16Device.Po  Pic16f6xx.Po  Pic16f7xDevice.Po  Pic16f81xDevice.Po  Pic16f87xADevice.Po  Pic16f8xxDevice.Po  Pic18Device.Po  Pic18f2xx0Device.Po  PicDevice.Po
usbprog/: ChangeLog  Makefile  Makefile.am  NEWS  README  RELEASEPLAN  bootstrap  configure.in  usbprog.c  usbprog.desktop
usbprog/gui/: Makefile.am  infodialog.cc  infodialog.h  pindialog.cc  pindialog.h  pins.xpm  usbprog-gui.pod  usbprog.rc  usbprog.xpm  usbprogApp.cc  usbprogApp.h  usbprogFrm.cc  usbprogFrm.h  usbprog_icon.xpm
usbprog/lib/: at89.c  at89.h  atmega.c  atmega.h  avrupdate.h  bootloader.c
usbprog/md5/: Makefile.am  README  md5.c  md5.h  md5_loc.h
usbprog/src/: Makefile.am  commands.cc  commands.h  configuration.cc  configuration.h  io.cc  io.h  main.cc  optionparser.cc  optionparser.h  shell.cc  shell.h  usbprog.cc  usbprog.h  usbprog.pod
usbprog/usbprog/: Makefile.am  date.cc  date.h  devices.cc  devices.h  digest.cc  digest.h  downloader.cc  downloader.h  firmwarepool.cc  firmwarepool.h  inifile.cc  inifile.h  optionparser.cc  optionparser.h  stringutil.cc  stringutil.h  usbprog.cc  usbprog.h  util.cc  util.h
usbprog/win32/: README  installer.nsi  libmd5.dev  libusbprog.dev  usbprog-gui.dev  usbprog.dev  usbprog_private.rc
usbprogLogic/usbproglogic/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.in  system.h  usbproglogic.1  usbproglogic.c  usbproglogic.lsm  usbproglogic.lsm.in  usbproglogic.spec  usbproglogic.spec.in  usbproglogic.texinfo  xmalloc.c
usbprogLogic/usbproglogic/autom4te.cache/: output.1  traces.0  traces.1
usbprog_tools/usbprog/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.in  system.h  texinfo.tex  usbprog.1  usbprog.c  usbprog.lsm  usbprog.lsm.in  usbprog.spec  usbprog.spec.in  usbprog.texinfo  xmalloc.c
usbprog_tools/usbprog-online/: .tm_project2.cache  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  config.status.lineno  configure  configure.in  configure.in.bak  usbprog-online.prj  usbprog-online.pws
usbprog_tools/usbprog-online/.anjuta/: anjuta.session  default.anjuta  dock-layout.xml
usbprog_tools/usbprog-online/autom4te.cache/: output.0  requests  traces.0
usbprog_tools/usbprog-online/gui/: WxWizFrame.fbp  usbprog-online.fbp
usbprog_tools/usbprog-online/images/: IconAbout24.xpm  SoftspringsLogo.xpm  hardware.xpm
usbprog_tools/usbprog-online/po/: Makefile  Makefile.in  POTFILES  POTFILES.in
usbprog_tools/usbprog-online/simlib/: Makefile  avrupdate.c  avrupdate.h  hotplug.avrupdate
usbprog_tools/usbprog-online/src/: AboutDialog.cpp  AboutDialog.h  AboutDialogGenerated.cpp  AboutDialogGenerated.h  CsvReader.cpp  CsvReader.h  GUIFrame.cpp  GUIFrame.h  MainFrame.cpp  MainFrame.h  MainFrameGenerated.cpp  MainFrameGenerated.h  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  OnlineVersions.cpp  OnlineVersions.h  USBDevices.cpp  USBDevices.h  log.txt  usbprog-online  usbprog.cpp  usbprog.h  usbprogonlineApp.cpp  usbprogonlineApp.h  usbprogonlineMain.cpp  usbprogonlineMain.h
usbprog_tools/usbprog-online/src/.deps/: CsvReader.P  GUIFrame.P  OnlineVersions.P  usbprog.P  usbprogonlineApp.P  usbprogonlineMain.P
usbprog_tools/usbprog/.deps/: getopt.Po  getopt1.Po  usbprog.Po  xmalloc.Po
usbprog_tools/usbprog/autom4te.cache/: output.1  requests  traces.0  traces.1
(+1508 files in other folders)
